<resources>
    <string name="app_name">FinTechVar</string>
    <string name="settings_text">Settings</string>
    <string name="preferences_text">Preferences</string>
    <string name="dark_mode_text">Dark Mode</string>
    <string name="currency_text">Currency</string>
    <string name="font_family_text">Font Family</string>
    <string name="language_text">Language</string>
    <string name="account_amp_security_text"><![CDATA[Account & Security]]></string>
    <string name="enable_biometrics_text">Enable Biometrics</string>
    <string name="privacy_policy_text">Privacy Policy</string>
    <string name="app_version_text">App Version 1.0.4</string>
    <string name="made_with_in_2026_text">Made with ♥ in 2024</string>
    <string name="back_arrow_description">Back Arrow</string>
    <string name="currency_flag_img">Currency Flag Img</string>
    <string name="name_editfield">Name</string>
    <string name="save_btn">Save</string>
    <string name="total_income_label">Total Income</string>
    <string name="total_expense_label">Total Expense</string>
    <string name="savings_non_goals_label">Savings\nOn Goals</string>
    <string name="category_name_label">Category Name</string>
    <string name="add_category_title">Add Category</string>
    <string name="add_transaction_label">Add Transaction</string>
    <string name="income_label">Income</string>
    <string name="expense_label">Expense</string>
    <string name="amount_label">Amount</string>
    <string name="category_hint">Category</string>
    <string name="date_hint">Date</string>
    <string name="time_hint">Time</string>
    <string name="select_categories_label">Select Categories</string>
    <string name="clear_btn">Clear</string>
    <string name="apply_btn">Apply</string>
    <string name="summary_title">Summary</string>
    <string name="category_label">Category</string>
    <string name="total_label">Total</string>
    <string name="wishing_label">Good Morning</string>
    <string name="today_label">Today</string>
    <string name="week_label">Week</string>
    <string name="month_label">Month</string>
    <string name="year_label">Year</string>
    <string name="no_transactions_yet_label">No transactions yet</string>
    <string name="income_vs_expense_label">Income vs Expense</string>
    <string name="select_language_label">Select Language</string>
    <string name="profile_label">Profile</string>
    <string name="edit_profile_label">Edit Profile</string>
    <string name="security_label">Security</string>
    <string name="setting_label">Setting</string>
    <string name="help_label">Help</string>
    <string name="delete_all_data_label">Delete All data</string>
    <string name="quickly_analysis_label">Quickly Analysis</string>
    <string name="from_date_label">From Date</string>
    <string name="to_date_label">To Date</string>
    <string name="select_date_range_label">Select Date Range</string>
    <string name="category_summary_label">Category summary</string>
    <string name="expense_summary_label">Expense summary</string>
    <string name="good_morning">Good Morning 🌅</string>
    <string name="good_afternoon">Good Afternoon 🌞</string>
    <string name="good_evening">Good Evening 🌆</string>
    <string name="good_night">Good Night 🌙</string>


</resources>